Sp 1026 (#1027) Fix unit test and activate them in actions
* [#1026] Fix unit test in extensions-management

* [#1026] Fix junit tests in streampipes-pipeline-management

* [#1026] Fix junit tests in streampipes-connect-management

* [#1026] Activate JUnit tests in GiHub actions

* [#1026] Remove flinkspector from tests